Fixed bug with height in content div: - page now takes up proper height of screen - overflow of content div allows for vertical scrolling of content, as opposed to vertical scrolling of entire page - TODO:  implement contact page - TODO:  implement animated background

--- a/my-website/src/App.css
+++ b/my-website/src/App.css
@@ -1,17 +1,27 @@
+* {
+    border: 1px solid var(--foreground-color);
+}
+
 .App {
     width: 100%;
     height: 100%;
     align-items: center;
     background-color: var(--background-color);
     transition: background-color 0.25s ease-in-out;
+    box-sizing: border-box;
 }
 
 .App-header {
     width: 100%;
-    height: auto;
     display: flex;
     padding: 15px;
     position: sticky;
+}
+
+.App-main {
+    display: flex;
+    padding: 10px;
+    flex-wrap: wrap;
 }
 
 nav {
@@ -21,6 +31,7 @@ nav {
     align-items: flex-end;
     padding-top: 10px;
 }
+
 nav a {
     text-decoration: none;
     font-family: var(--font-family-body);
@@ -28,22 +39,17 @@ nav a {
     color: var(--secondary-text-color);
 }
 
-.App-main {
-    display: flex;
-    padding: 10px;
-    flex-wrap: wrap;
-}
-
 .content {
     width: 95%;
+    height: 85vh;
     display: flex;
-    flex: 1;
     flex-wrap: wrap;
     box-sizing: border-box;
     padding: 15px;
     color: var(--secondary-text-color);
     font-family: var(--font-family-body);
     margin: 5px;
+    overflow-y: auto;
 }
 
 .toggle {
@@ -63,9 +69,9 @@ nav a {
 }
 
 .toggle input[type="checkbox"] {
-    margin-right: 10px; /* Adds space between checkbox and label */
-    width: 24px; /* Adjust width to make the checkbox bigger */
-    height: 24px; /* Adjust height to make the checkbox bigger */
+    margin-right: 10px;
+    width: 24px;
+    height: 24px;
     appearance: none;
     outline: none;
     border: 1px solid var(--foreground-color);
@@ -74,15 +80,15 @@ nav a {
 }
 
 .toggle input[type="checkbox"]:checked {
-    background-color: var(--toggle-bg); /* Checked background color */
+    background-color: var(--toggle-bg);
 }
 
 .toggle input[type="checkbox"]::before {
-    content: ""; /* Empty content */
+    content: "";
 }
 
 .toggle input[type="checkbox"]:checked::before {
-    visibility: visible; /* Show the checkmark when checked */
+    visibility: visible;
 }
 
 .logo {
@@ -94,8 +100,8 @@ nav a {
 
 .project {
     display: flex;
-    width: 25%;
-    height: 42vh;
+    width: 33%;
+    height: 33%;
     box-sizing: border-box;
     padding: 10px;
     align-items: center;
@@ -115,7 +121,6 @@ nav a {
 
     .project {
         width: 50%;
-        height: 42vh;
     }
 
     .toggle {
